<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quill</string>
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>

    <string name="bookshelf_item_large_text">Large Text</string>
    <string name="bookshelf_item_small_text">Small Text</string>

    <string name="image_editor_save">Save</string>
    <string name="image_editor_erase_erase">Erase</string>
    <string name="image_editor_rotate_left">Rotate Left</string>
    <string name="image_editor_rotate_right">Rotate Right</string>
    <string name="image_editor_crop">Crop</string>
    <string name="image_editor_no_image">No image selected</string>

    <string name="editor_crop_save">Save</string>
    <string name="editor_crop_discard">Discard</string>
    <string name="editor_crop_rotate_left">Rotate Left</string>
    <string name="editor_crop_rotate_right">Rotate Right</string>

    <string name="import_backup">Importing Backup</string>

    <string name="sync_item_notebook">Notebook Title</string>
    <string name="sync_item_modification">Modification time</string>

    <string name="sync_status_sync">Synchronizing</string>
    <string name="sync_status_contacting">Contacting server</string>
    <string name="sync_status_account">Account</string>
    <string name="sync_status_name">Firstname Lastname</string>
    <string name="sync_status_email">my.account@gmail.com</string>

    <string name="update_path">Backup directory path:</string>
    <string name="update_medium">Medium Text</string>
    <string name="update_space">Required space:</string>
    <string name="update_available">Available space:</string>
    <string name="update_ok">OK</string>
    <string name="update_change">Change Directory</string>

</resources>
