<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <view
        android:id="@+id/image_editor_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="com.write.Quill.image.CropImageView"
        android:background="#55000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:paddingBottom="25dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="25dp" >

        <Button
            android:id="@+id/image_editor_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/image_editor_save" />

        <Button
            android:id="@+id/image_editor_erase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/image_editor_erase_erase" />

        <ImageButton
            android:id="@+id/image_editor_rotate_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/image_editor_rotate_left"
            android:text="@string/image_editor_rotate_left" />

        <ImageButton
            android:id="@+id/image_editor_rotate_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/image_editor_rotate_left"
            android:src="@drawable/image_editor_rotate_right"
            android:text="@string/image_editor_rotate_right" />

        <CheckBox
            android:id="@+id/image_editor_check_crop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/image_editor_crop" />
    </RelativeLayout>

    <TextView
        android:id="@+id/image_editor_no_image_text"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/image_editor_no_image"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</FrameLayout>
